examples/test/testpolicy13724.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13724
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key49: value43
      key34: value32
      key46: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value16
          key1: value11
          key27: value21
      podSelector:
        matchLabels:
          key25: value41
